# AdventOfCodeCPP

./: .gitignore  CMakeLists.txt  IDay.h  README.md  main.cpp  utils.cpp  utils.h
2022/day01/: day01.cpp  day01.h  day01_test.cpp
2022/day02/: day02.cpp  day02.h
2023/day01/: day01.cpp  day01.h  day01_test.cpp  testdata.txt
2023/day02/: Day02.cpp  Day02.h  Day02_test.cpp
2023/day03/: Day03.cpp  Day03.h  Day03_test.cpp
